# HarmonyNativeCPP

./: .gitignore  README.md  build-profile.json5
entry/: oh-package-lock.json5  oh-package.json5
entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp  napi_ugc_init.cpp
entry/src/main/cpp/types/libcalc/: Index.d.ts
entry/src/main/cpp/types/libugc/: Index.d.ts  oh-package.json5
entry/src/main/ets/pages/: Index.ets
